--- a/src/main/webapp/WEB-INF/view/admin/directories/lists/copy-list-tasks.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/lists/copy-list-tasks.html
@@ -13,7 +13,7 @@
         <p class="add-task__title">Добавить все задания из списка</p>
         <div class="add-task-list__wrapper">
             <p class="task-list__name">Список заданий</p>
-            <select class="add-task__select" id="add-task__select">
+            <select class="add-task__select" id="add-task-from-list__select">
                 <!--/*@thymesVar id="listings" type="java.util.List<ru.spbu.distolymp.dto.entity.lists.listing.ListingNameDto>"*/-->
                 <option th:each="listing : ${listings}"
                         th:value="${listing.name}" th:text="${listing.name} "
