--- a/src/main/webapp/resources/css/styles/style.css
+++ b/src/main/webapp/resources/css/styles/style.css
@@ -1,5 +1,5 @@
 *,
-*+*,
+* + *,
 *::after,
 *::before {
     box-sizing: border-box;
@@ -23,17 +23,18 @@ body {
     height: 100vh;
 
     overflow-x: hidden;
+
+    /*background-image: url("https://res.cloudinary.com/dui2dgzj2/image/upload/v1679331763/Frame_2_i5diio.png");*/
+    /*background-repeat: repeat;*/
+    /*background-size: cover;*/
+    background: linear-gradient(#D6CFC7, transparent 1px), linear-gradient(90deg, #D6CFC7, transparent 1px);
 }
 
 .container {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-
-    background-color: #FFFFFF;
-
-    border-left: 1px solid #696969;
-    border-right: 1px solid #696969;
+    background-color: #EDE5E2;
 }
 
 .header {
@@ -56,6 +57,7 @@ body {
 
 .main {
     height: 100%;
+    width: 100%;
 }
 
 .select-page__wrapper {
@@ -108,9 +110,11 @@ body {
     display: flex;
 
     padding: 5px 10px;
-    width: 90%;
+    width: 95%;
+    margin: 0 auto;
     background-color: #E3AF8A;
-    margin: 0 auto 30px;
+
+    margin-bottom: 30px;
 }
 
 .task-select {
@@ -154,10 +158,6 @@ body {
     width: 95%;
     height: auto;
     margin: 0 auto 0;
-
-    /* border-bottom: 1px solid; */
-
-    /* position: relative; */
 }
 
 
@@ -293,6 +293,7 @@ body {
 .footer {
     background-color: #E3AF8A;
     height: 23px;
+    margin-top: 10px;
 }
 
 /* 2 */
@@ -303,7 +304,7 @@ body {
     width: 95%;
     margin: 0 auto;
     padding: 1.04vw 0.35vw;
-    
+
     z-index: 2;
 }
 
@@ -313,7 +314,7 @@ body {
     left: 38px;
     font-weight: 600;
     z-index: 3;
-    background-color: #FFFFFF;
+    background-color: #EDE5E2;
 }
 
 .add-task__select {
@@ -326,7 +327,7 @@ body {
 
 .add-task-list__wrapper {
     display: flex;
-    padding: 5px 10px;
+    padding: 5px 20px;
     width: 95%;
     margin: 0 auto;
     background-color: #E3AF8A;
@@ -355,6 +356,7 @@ body {
     margin: 0;
     margin-right: 10px;
 }
+
 /* 1 */
 .add-tasks-buttons__wrapper {
     display: flex;
@@ -381,7 +383,7 @@ body {
     left: 38px;
     font-weight: 600;
     z-index: 3;
-    background-color: #FFFFFF;
+    background-color: #EDE5E2;
 }
 
 .add-task__title {
@@ -390,12 +392,12 @@ body {
     left: 38px;
     font-weight: 600;
     z-index: 3;
-    background-color: #FFFFFF;
+    background-color: #EDE5E2;
 }
 
 .add-task-in-list__wrapper {
     display: flex;
-    padding: 5px 10px;
+    padding: 5px 20px;
     width: 95%;
     margin: 0 auto;
     background-color: #E3AF8A;
@@ -403,23 +405,28 @@ body {
 }
 
 /* 3 */
-.copy-tasks-list__wrapper {
-    display: none;
-    margin: 20px auto;
-    padding: 15px 20px;
-}
 
 .copy-task-list__wrapper {
-    padding: 15px 10px;
+    position: relative;
+    padding: 15px 20px;
     width: 95%;
     margin: 0 auto;
     background-color: #E3AF8A;
     margin-bottom: 15px;
 }
 
+.copy-task__input {
+    max-width: 900px;
+    width: 100%;
+    height: 23px;
+    position: absolute;
+    left: calc(40% - 250px);
+    padding: 0 5px;
+}
+
 .copy-title__warning {
     text-align: center;
-    margin: 20px 0 !important; 
+    margin: 20px 0 !important;
 }
 
 .copy-block {
@@ -432,13 +439,13 @@ body {
 }
 
 
-
 .copy-task-list__name {
     line-height: 1.3;
 }
 
 .copy-toList-btn {
-    margin: 0 10px 0 0;
+    margin: 0;
+    margin-right: 10px;
 }
 
 /* ТАБЫ */
@@ -465,7 +472,7 @@ body {
     align-items: center;
     padding: 5px 50px;
     margin: 0 10px;
-    background-color: #FFFFFF;
+    background-color: #EDE5E2;
 
     border: 1px solid #000000;
     border-bottom: none;
@@ -516,7 +523,7 @@ body {
     left: 38px;
     font-weight: 600;
     z-index: 3;
-    background-color: #FFFFFF;
+    background-color: #EDE5E2;
 }
 
 .start-time__wrapper {
